[workspace]
default-members = ["."]
members = ["sqlite"]

[workspace.package]
description = "Libraries for interacting with various SQL database management systems"

authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
repository = "https://github.com/shipsimfan/lib-sql"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
sql.path = "."


[package]
name = "sql"
description = "Common interface definition for all supported SQL database management systems"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
