[package]
name = "sqlite"
description = "SQL common interface implementation for SQLite3"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sql.workspace = true

sqlite3.git = "https://github.com/shipsimfan/lib-sqlite3"
